# upkg

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
upkg/: CMakeLists.txt
upkg/include/upkg/: CenteredBoxProxy.hpp  datamodel.hpp  misc.hpp  qcommondelegate.hpp  upkg.hpp
upkg/src/: datamodel.cpp  main.cpp  misc.cpp  res.qrc  upkg.cpp  upkg.rc.in  upkg.ui
